<resources>
    <string name="app_name">Geo Note</string>

    <string name="base_url">https://geo-note.herokuapp.com</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="connection_error">There was connection error during login</string>
    <string name="incorrect_response">Incorrect server response - contact admin</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register if not a member</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="user_exists">Username already exists</string>
    <string name="welcome_string">Welcome to</string>
    <string name="geo_note">Geo-Note</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_unavailable">Couldn\'t find your location</string>
    <string name="publish_error">Error occured during publishing</string>
    <string name="conn_error">Connection Error :( Please try restart app...</string>
    <string name="spam_warning">You created too much notes in this neighbourhood</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="note_created">Note created :)</string>
    <string name="location_occupied">Someone left note at exact same location :(</string>
    <string name="current_location">Current Location</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_visibility_cat">Visibility</string>
    <string name="settings_visibility_key">visibility</string>
    <string name="settings_owned_key">owned</string>
    <string name="settings_owned_title">Show Owned Notes</string>
    <string name="settings_others_key">others</string>
    <string name="settings_others_title">Show Others Notes</string>
    <string name="settings_radius_key">radius</string>
    <string name="settings_radius_title">Search Radius</string>

    <string name="radius_label">%1$sm</string>
    <string name="settings_map_key">map</string>
    <string name="settings_map_title">Map</string>
    <string name="expiration_time">Expiration time: </string>
    <string name="minutes_label">min</string>
    <string name="days_label">days</string>
    <string name="hours_label">hours</string>
    <string name="minutes_choose_label">%1$s[min]</string>
    <string name="hours_choose_label">%1$s[hr]</string>
    <string name="days_choose_label">%1$s[d]</string>
</resources>
