<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:background="@drawable/login_img"
    tools:context="com.steveq.geonoteclient.login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:paddingVertical="12dp"
                android:paddingHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:text="@string/welcome_string"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:text="@string/geo_note"/>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress"
                        android:textColor="#FAFAFA"
                        android:textColorHint="#FAFAFA"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:textColor="#FAFAFA"
                        android:textColorHint="#FAFAFA"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/username_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in_short"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

                <TextView
                    android:id="@+id/registerTextView"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_register"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/credentialsErrorTextView"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textAlignment="center"
                    android:background="@color/errorColor"
                    android:textColor="@color/errorTextColor"
                    tools:text="Invalid Credentials"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/login_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#bdbdbdE6"
            android:visibility="gone"
            android:gravity="center">
            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
